--- a/foundation/billing/templates/billing/events/notice.html
+++ b/foundation/billing/templates/billing/events/notice.html
@@ -1,29 +1,18 @@
-{% load i18n staticfiles humanize %}
+{% load i18n staticfiles humanize auth_tokens %}
 <div class="col-xs-4 col-sm-3">
     <img src="{% static 'ikwen/img/invoice-icon.png' %}" alt="Invoice" class="img-responsive" />
 </div>
+<div class="col-xs-8 col-sm-9">
+    <h4 class="text-primary">{{ title|safe }}</h4>
+    <p>
+        <span class="text-primary" style="font-size: 21px">{{ currency_symbol }}</span>
+        <strong class="text-primary" style="font-size: 21px">{{ amount|intcomma }}</strong>
+        <a href="{{ details_url }}" style="margin-left: 7px">{% trans "Details" %}</a>
+    </p>
+</div>
 {% if show_pay_now %}
-    <div class="col-xs-8 col-sm-6">
-        <h4 class="text-primary">{{ title|safe }}</h4>
-        <p>
-            <span class="text-primary" style="font-size: 21px">{{ currency }}</span>
-            <strong class="text-primary" style="font-size: 21px">{{ amount|intcomma }}</strong>
-            <a href="{{ details_url }}" style="margin-left: 7px">{% trans "Details" %}</a>
-        </p>
-    </div>
-    <div class="col-xs-8 col-xs-offset-2 col-sm-offset-0 col-sm-3">
-        <a href="{{ pay_now_url }}" class="btn btn-warning btn-sm btn-block">{% trans "Pay now" %}</a>
-    </div>
-    <time title="{{ obj.created_on }}" style="margin-right: 15px">{{ obj.created_on|naturaltime }}</time>
-{% else %}
-    <div class="col-xs-8 col-sm-9">
-        <h4 class="text-primary">{{ title|safe }}</h4>
-        <p>
-            <span class="text-primary" style="font-size: 21px">{{ currency }}</span>
-            <strong class="text-primary" style="font-size: 21px">{{ amount|intcomma }}</strong>
-            <a href="{{ details_url }}" style="margin-left: 7px">{% trans "Details" %}</a>
-        </p>
-        <time title="{{ obj.created_on }}">{{ obj.created_on|naturaltime }}</time>
+    <div class="col-xs-8 col-xs-offset-2 col-sm-offset-3 col-sm-6" style="margin-top: 15px">
+        <a href="{{ pay_now_url|append_auth_tokens:request }}" class="btn btn-warning btn-sm btn-block">{% trans "Pay now" %}</a>
     </div>
 {% endif %}
 <div class="clear"></div>
