--- a/foundation/accesscontrol/templates/accesscontrol/access_request_list.html
+++ b/foundation/accesscontrol/templates/accesscontrol/access_request_list.html
@@ -50,7 +50,7 @@
                                 </div>
                                 <div class="spacer"></div>
                                 <div class="col-sm-3 col-md-3 action">
-                                    <button class="btn btn-success btn-sm btn-block allow-access" data-request-id="{{ elt.rq.id }}" data-access-type="{{ elt.rq.type }}">{% trans "Grant access" %}</button>
+                                    <button class="btn btn-success btn-sm btn-block allow-access" data-request-id="{{ elt.rq.id }}">{% trans "Grant access" %}</button>
                                 </div>
                                 <div class="col-sm-3 col-md-3 action" style="cursor: pointer; font-weight: 700; padding-top: 7px">
                                     <span class="text-danger deny-access" data-request-id="{{ elt.rq.id }}">{% trans "No, Refuse" %}</span>
@@ -65,7 +65,7 @@
                                         </div>
                                     {% endfor %}
                                 </div>
-                                <p class="text-success" style="display: none">{% trans "Access successfully granted to collaborator." %}</p>
+                                <p class="text-success" style="display: none">{% trans "Access successfully granted to member." %}</p>
                                 <button data-request-id="{{ elt.rq.id }}" class="btn btn-success btn-sm btn-block confirm-group">{% trans "Confirm" %}</button>
                             </div>
                         </div>
