--- a/foundation/accesscontrol/templates/accesscontrol/snippets/request_management.html
+++ b/foundation/accesscontrol/templates/accesscontrol/snippets/request_management.html
@@ -2,12 +2,9 @@
 <script type="text/javascript">
     (function() {
         {% if request.GET.successfulRequest %}ikwen.showFloatingNotice('{% trans "Request successfully submitted." %}', '', 6);{% endif %}
-        var COLLABORATION_REQUEST = 'CollaborationRequest';
         $('.request-access').click(function() {
-            var serviceId = $(this).data('service-id'),
-                accessType = $(this).data('access-type');
-            $.getJSON('{% url 'ikwen:request_access' %}',
-                    {access_type: accessType, service_id: serviceId, format: 'json'}, function(data) {
+            var serviceId = $(this).data('service-id');
+            $.getJSON('{% url 'ikwen:request_access' %}', {service_id: serviceId, format: 'json'}, function(data) {
                 if (data.success) {
                     $('section#about .actions').addClass('text-success').html('{% trans "Request successfully submitted." %}');
                 }
@@ -15,20 +12,14 @@
         });
         $('.allow-access').click(function() {
             var requestId = $(this).data('request-id'),
-                accessType = $(this).data('access-type'),
                 _$details = $(this).parents('.details');
-            if (accessType == COLLABORATION_REQUEST) {
-                if (_$details.find('.group').length == 1) {
-                    var groupId = _$details.find('input[name=group]').val();
-                    _$details.find('.group-choice').hide();
-                    if (confirm("{% trans "Grant collaboration access ?" %}")) grantCollaborationAccess(requestId, groupId, _$details);
-                } else {
-                    _$details.find('.about').hide();
-                    _$details.find('.groups').show();
-                }
-            } else {
+            if (_$details.find('.group').length == 1) {
+                var groupId = _$details.find('input[name=group]').val();
                 _$details.find('.group-choice').hide();
-                grantCustomerAccess(requestId, _$details);
+                if (confirm("{% trans "Grant collaboration access ?" %}")) grantAccess(requestId, groupId, _$details);
+            } else {
+                _$details.find('.about').hide();
+                _$details.find('.groups').show();
             }
         });
         $('.deny-access').click(function() {
@@ -40,19 +31,10 @@
             var requestId = $(this).data('request-id'),
                 groupId = $('.access-request .groups input[name=group]').val(),
                 _$details = $(this).parents('.details');
-            grantCollaborationAccess(requestId, groupId, _$details);
+            grantAccess(requestId, groupId, _$details);
         });
-        function grantCustomerAccess(requestId, _$details) {
-            $.getJSON('{% url 'ikwen:grant_access_to_customer' %}', {request_id: requestId}, function(data) {
-                if (data.success) {
-                    _$details.find('.about, .groups button').hide();
-                    _$details.find('.groups').show();
-                    _$details.find('.groups p.text-success').text("{% trans "Access successfully granted to customer." %}").show();
-                }
-            })
-        }
-        function grantCollaborationAccess(requestId, groupId, _$details) {
-            $.getJSON('{% url 'ikwen:grant_access_to_collaborator' %}', {request_id: requestId, group_id: groupId}, function(data) {
+        function grantAccess(requestId, groupId, _$details) {
+            $.getJSON('{% url 'ikwen:grant_access' %}', {request_id: requestId, group_id: groupId}, function(data) {
                 if (data.success) {
                     _$details.find('.about, .groups button').hide();
                     _$details.find('.groups').show();
