--- a/foundation/core/templates/core/mails/base.html
+++ b/foundation/core/templates/core/mails/base.html
@@ -6,26 +6,36 @@
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 		<title>{{ config.company_name }} - {{ subject }}</title>
     </head>
-    <body style="background: #f6f6f6; font: normal 78% Helvetica, Arial, sans-serif; margin: 0; padding-top: 15px">
+    <body style="background: #f6f6f6; font: normal 78% 'Open Sans', 'Helvetica Neue', Lato, Verdana, Arial, sans-serif; margin: 0; padding-top: 15px">
         <div style="background: #fff; margin: 0 auto; padding: 0; width: 90%">
-            {% if config.cover_image.name %} {# TOP #}
-                <div style="background: url({{ config.cover_image.url }}) center; background-size: auto 100%; height: 225px; width: 100%">
-                    <p style="color: #fff; float: left; font-size: 3.6em; margin: 45px 0 0 25px; text-shadow: 1px 2px 2px rgba(0, 0, 0, .7)">{{ config.company_name }}</p>
-                    <p style="color: #fff; clear: both; float: left; font-size: 2em; margin-left: 25px; text-shadow: 1px 2px 2px rgba(0, 0, 0, .7)">{{ config.short_description }}</p>
-                </div>
-            {% else %}
-                <div style="background: #557cff; height: 150px">
-{#                    {% if config.logo.name %}#}
-{#                        <a href="{{ service.url }}" style="float: left">#}
-{#                            <img src="{{ config.logo.url }}" style="margin: 9px 0 0 9px" alt="logo" height="135"/>#}
-{#                        </a>#}
-{#                    {% endif %}#}
-                    <div style="float: left; margin-left: 36px">
-                        <p style="color: #fff; float: left; font-size: 3.6em; margin: 15px 0 0 25px">{{ config.company_name }}</p>
-                        <p style="color: #fff; clear: both; float: left; font-size: 1.8em; margin-left: 25px">{{ config.short_description }}</p>
+            {% block header %}
+                {% if config.cover_image.name %} {# TOP #}
+                    <div style="background: url({{ config.cover_image.url }}) center; background-size: cover; height: 225px; width: 100%">
+                        <p style="color: #fff; float: left; font-size: 3.6em; margin: 45px 0 0 25px; text-shadow: 1px 2px 2px rgba(0, 0, 0, .7)">{{ config.company_name }}</p>
+                        <p style="color: #fff; clear: both; float: left; font-size: 2em; margin-left: 25px; text-shadow: 1px 2px 2px rgba(0, 0, 0, .7)">{{ config.short_description }}</p>
                     </div>
-                </div>
-            {% endif %} {# END TOP #}
+                {% elif config.logo.name %}
+                    <div>
+                        <a href="{{ service.url }}" style="display: block; float: left; width: 20%">
+                            <img src="{{ config.logo.url }}" style="margin: 9px 0 0 9px" alt="logo" height="135"/>
+                        </a>
+                        <div style="float: left; width: 80%">
+                            <div style="float: left; margin-left: 36px">
+                                <p style="color: #888; float: left; font-size: 3.6em; margin: 15px 0 0 25px">{{ config.company_name }}</p>
+                                <p style="color: #888; clear: both; float: left; font-size: 1.8em; margin-left: 25px">{{ config.short_description }}</p>
+                            </div>
+                        </div>
+                        <div style="clear: both"></div>
+                    </div>
+                {% else %}
+                    <div style="background: #557cff; height: 150px">
+                        <div style="float: left; margin-left: 36px">
+                            <p style="color: #fff; float: left; font-size: 3.6em; margin: 15px 0 0 25px">{{ config.company_name }}</p>
+                            <p style="color: #fff; clear: both; float: left; font-size: 1.8em; margin-left: 25px">{{ config.short_description }}</p>
+                        </div>
+                    </div>
+                {% endif %} {# END TOP #}
+            {% endblock %}
 
             {% block content %}{% endblock %}
 
@@ -68,7 +78,7 @@
 {#                            This is an <a href="http://www.ikwen.com">Ikwen &reg; </a> powered <a href="http://www.nodevtrend.org">NoDev</a> website.#}
 {#                        {% endblocktrans %}#}
                         {% blocktrans %}
-                            Powered by <a href="http://www.ikwen.com" style="color: #666; text-decoration: none"><strong>Ikwen</strong></a> &reg;.
+                            Powered by <a href="http://www.ikwen.com" style="color: #666; text-decoration: none"><strong>ikwen</strong></a> &reg;.
                         {% endblocktrans %}
                     </div>
                 </div>
