--- a/static/ikwen/admin/css/changelists.css
+++ b/static/ikwen/admin/css/changelists.css
@@ -92,7 +92,13 @@
 }
 
 #changelist #toolbar form #searchbar {
-    padding: 2px;
+    border: 2px solid #ccc;
+    margin-left: 0.5em;
+    padding: 3px 2px;
+    margin-top: -3px;
+    border-radius: 3px;
+    background: #fff;
+    box-sizing: content-box;
 }
 
 #changelist #changelist-search img {
@@ -116,10 +122,9 @@
 #changelist-filter h2 {
     font-size: 17px;
     padding: 8px 5px;
-    border-bottom: none;
-    height: 35px;
-    background: #2c3e50;
-    color: #fff;
+    border-bottom: 2px solid #eee;
+    height: 44px;
+    color: #2c3e50;
 }
 
 #changelist-filter h3 {
@@ -276,15 +281,18 @@
 }
 
 #changelist .actions select {
-    border: 1px solid #aaa;
+    border: 2px solid #ccc;
     margin-left: 0.5em;
     padding: 3px 2px;
     margin-top: -3px;
+    border-radius: 3px;
+    background: #fff;
+    box-sizing: content-box;
 }
 
 #changelist .actions label {
     font-size: 14px;
-    margin-left: 0.5em;
+    margin-left: 1em;
 }
 
 #changelist #action-toggle {
@@ -292,5 +300,6 @@
 }
 
 #changelist .actions .button {
-    padding: 2px 24px;
+    padding: 6px 24px;
+    margin-top: -2px;
 }
