--- a/static/ikwen/css/base.css
+++ b/static/ikwen/css/base.css
@@ -52,6 +52,11 @@
 .floating-notice {background: #F6FF8C; border: 1px solid #CDD570; border-radius: 2px; color: #484B2B; padding: 9px 24px; position: absolute}
 .floating-notice.failure {border: 1px solid; color:  #F00}
 .floating-notice .action {cursor: pointer; text-decoration: underline}
+.status-bullet {border-radius: 50%;display: block;height: 15px;width: 15px;float: left;margin: 2px 10px 0 0;}
+.status-bullet.warning, .status-bullet.pending {background: #FF9800;}
+.status-bullet.primary {background: #3498db}
+.status-bullet.success {background: #2ab732}
+.status-bullet.danger, .status-bullet.canceled, .status-bullet.rejected {background: #ee4032}
 
 .member, .ik-li {border-bottom: 1px solid #eee;display: block;float: left;padding: 15px;width: 100%; transition: border .1s}
 .member:hover, .ik-li:hover {background: #f8f8f8}
@@ -65,9 +70,9 @@
 .ik-li.selected {border: 3px solid #9433ff; transition: border .1s}
 .ik-li.selected + .ik-li.selected {border-top: none}
 .ik-li.selected .select {background: #9433ff url('../img/white-tick-15.png') no-repeat center; display: block}
-.ik-li .actions {display: none; float: right}
+.ik-li .actions {display: none;float: right;}
 .ik-li:hover .select, .ik-li:hover .actions {display: block}
-time {color: #888;float: right;clear: both;font-size: 11px;margin-top: -15px;padding: 0;}
+time {color: #888;float: right;font-size: 11px; font-weight: normal; padding: 0;}
 
 .tiles .ik-li {border: 1px solid #eee;height: 150px;margin: 15px;width: 45%;}
 .tiles .ik-li.selected {border: 3px solid #9433ff}
@@ -78,7 +83,7 @@ time {color: #888;float: right;clear: both;font-size: 11px;margin-top: -15px;pad
 .tiles .ik-li:hover, .tiles .ik-li.active {background: #f6f6f6}
 .tiles .ik-li .image {height: 200px;width: 100%}
 .tiles .ik-li .info {margin: 7px 0 0 0}
-.ik-li .actions {margin-top: 7px}
+.ik-li .actions {margin-top: 7px;}
 
 .has-shade {box-shadow: 1px 1px 9px 4px rgba(0, 0, 0, .1)}
 .text-has-shade {text-shadow: 1px 2px 2px rgba(0, 0, 0, .7)}
@@ -91,6 +96,10 @@ time {color: #888;float: right;clear: both;font-size: 11px;margin-top: -15px;pad
 #navbar form.search input {border: 1px solid}
 #navbar form.search .results ul {padding-left: 0}
 #navbar ul.navbar-right > li > a {padding: 10px}
+@media (max-width: 992px) {
+    #navbar {margin-bottom: 0}
+    #content.container {padding: 47px 0 0;width: 100%;}
+}
 @media (min-width: 768px) {
     #navbar form.search {display: block;float: left;margin: 6px 0 0 55px;}
     #navbar form.search input {border: 1px solid;width: 330px;}
@@ -167,5 +176,7 @@ div#container.admin {padding-top: 92px;}
 }
 .checkbox-row input[type=checkbox] {float: left;width: 20px;}
 .checkbox-row label {margin: 10px 0 0 10px}
+#stage section {background: #fff;float: left;margin-top: 25px;overflow: hidden;padding: 15px;width: 100%;}
+#stage section h3 {font-size: 21px; font-weight: 700; margin-top: 0}
 footer a {color: #999}
 footer {padding-bottom: 30px}
