--- a/static/ikwen/css/console.css
+++ b/static/ikwen/css/console.css
@@ -1,41 +1,45 @@
 
 #content {padding-top: 80px; min-height: 450px}
-#cover {background-color: #fff;float: left;width: 100%;overflow: hidden;}
+#cover {float: left;width: 100%;overflow: hidden;}
 @media (min-width: 320px) {
-    #cover {background-size: auto 100%;}
+    #cover {background: #fff no-repeat center}
 }
-@media (min-width: 475px) {
+@media (min-width: 476px) {
     #cover {background-size: 100% auto;}
 }
 #banner {height: 300px; overflow: hidden}
-#banner .frame {background: rgba(0, 0, 0, .7); float: left; height: 100%; overflow: hidden; width: 240px}
+#banner .frame {background: rgba(0, 0, 0, .7); height: 100%; margin: auto; width: 90%; overflow: hidden}
 #banner .photo {background: #fff no-repeat center; background-size: 100%; border: 4px solid #fff; height: 142px; margin: 79px auto; width: 142px}
 #banner .photo img {height: 100%; width: 100%}
 #banner .upload-image {background-color: rgba(0,0,0, .6); color: #eee; display: none; font-size: 13px;
     height: 30px; padding: 5px; position: absolute; text-align: center}
 #banner .photo .upload-image {margin: 108px 0 0 -4px; width: 142px}
 #banner > .upload-image {margin: 15px 0 0 535px; width: 180px}
+@media (min-width: 1200px) {
+    #banner > .upload-image {margin-left: 625px}
+}
 #banner:hover > .upload-image, #banner .photo:hover .upload-image {display: block}
 #banner h2 {color: #fff; float: left; font-size: 27px; font-weight: 700; margin: 240px 0 0 30px; }
-@media (max-width: 475px) {
-    #banner .frame {float: none; margin: auto; width: 90%}
+#banner .frame {float: none; margin: auto; width: 90%}
+@media (min-width: 476px) {
+    #banner .frame {float: left; overflow: hidden; width: 240px}
 }
 #cover nav {}
-@media (max-width: 992px) {
-    #navbar {margin-bottom: 0}
-    #content.container {padding-top: 60px;width: 100%;}
-}
 #stage {float: left; width: 100%}
 @media (min-width: 992px) {
     #stage {width: 730px}
     #stage .container-fluid {padding: 0}
 }
-#stage section {background: #fff;float: left;margin-top: 25px;overflow: hidden;padding: 15px;width: 100%;}
-#stage section h3 {font-size: 21px; font-weight: 700; margin-top: 0}
-#stage section h3 img {margin-right: 6px}
-#stage section > div:first-of-type h4 {margin-top: 7px}
-#stage section h4 {color: #666;font-size: 18px;margin-top: 30px;}
-#stage section h4 a.more {color: #0069c3;float: right;font-size: 13px}
+@media (min-width: 1200px) {
+    #stage {width: 820px}
+}
+#stage .card {background: #fff;float: left;margin-top: 25px;overflow: hidden;padding: 15px;width: 100%;}
+#stage .card h3 {font-size: 16px;font-weight: 700;margin-top: 0;}
+#stage .card h3 img {margin-right: 6px}
+#stage .card > div:first-of-type h4 {margin: 0 0 .5em;}
+#stage .card h4 {color: #666;font-size: 17px;margin-top: 30px;}
+#stage .card h4 a.more {color: #0069c3;float: right;font-size: 13px}
+#stage .card .event-media {margin: 1em 0}
 #about ul {margin: 0; padding: 0}
 #about ul li {list-style-type: none; line-height: 25px}
 #about ul li label {width: 90px}
@@ -74,10 +78,8 @@
 #ad-space-right div#ad {background: #ddd; height: 360px; margin-top: 15px}
 
 #admin-content.embed {background: #fff; height: 850px}
-#stage section.fk-couture-pro {border: 1px solid #444;}
-#stage section.fk-couture-pro h3 {color: #333}
 
-iframe#billing-stage {border: none;margin: -15px 0 0 -15px;height: 100%;width: 105%;}
+iframe#billing-stage {border: none;margin: -15px 0 0 -15px;height: 170%;width: 100%;}
 
 /** Events **/
 .SubscriptionEvent>h4, .NewInvoiceEvent>h4, .InvoiceReminderEvent>h4, .OverdueNoticeEvent>h4, .ServiceSuspendedEvent>h4,
